# ggml-ane

./: README.md  test_ane_backend.c
ggml/include/: ggml-ane.h
ggml/src/ggml-ane/: CMakeLists.txt  ane_bridge.h  ane_bridge.m  ggml-ane.mm
